force-app/main/default/objects/Order_Communication_POE__c/Order_Communication_POE__c.object-meta.xml
<CustomObject>
    <description>Records created by scheduled apex</description>
    <label>Order Communication</label>
    <nameField>
        <displayFormat>OC-{00000000}</displayFormat>
        <label>Order Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>