force-app/main/default/objects/Order_Communication_POE__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(OR(TAD_Order__r.ordexp_account__r.RecordType.Name = &apos;Product Partner&apos;,TAD_Order__r.ordexp_account__r.RecordType.Name = &apos;PAF Corp Client&apos;), TAD_Order__r.ordexp_account__r.Name , TAD_Order__r.ordexp_account__r.FirstName+&apos; &apos;+TAD_Order__r.ordexp_account__r.LastName)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>