force-app/main/default/objects/Order_Communication_POE__c/fields/Account_Name_bh__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_bh__c</fullName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>