force-app/main/default/objects/Order_Communication_POE__c/fields/Add_On_Information__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Information__c</fullName>
    <label>Add On Information</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>