force-app/main/default/objects/Order_Communication_POE__c/fields/Affiliate_Booking_Charge__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Booking_Charge__c</fullName>
    <label>Affiliate Booking Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>