force-app/main/default/objects/Order_Communication_POE__c/fields/BBL_Generic_Record_1__c.field-meta.xml
<CustomField>
    <fullName>BBL_Generic_Record_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BBL Generic Record 1</label>
    <referenceTo>Generic_Records__c</referenceTo>
    <relationshipLabel>Order Communications (BBL Generic Record 1)</relationshipLabel>
    <relationshipName>Order_Communications1</relationshipName>
    <type>Lookup</type>
</CustomField>