force-app/main/default/objects/Order_Communication_POE__c/fields/Bed_type_c__c.field-meta.xml
<CustomField>
    <fullName>Bed_type_c__c</fullName>
    <label>Bed Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>