force-app/main/default/objects/Order_Communication_POE__c/fields/bh_Total_QFF_Received__c.field-meta.xml
<CustomField>
    <fullName>bh_Total_QFF_Received__c</fullName>
    <label>Total QFF Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>