force-app/main/default/objects/Order_Communication_POE__c/fields/Block_Coms__c.field-meta.xml
<CustomField>
    <fullName>Block_Coms__c</fullName>
    <formula>TAD_Order__r.orderxp_Block_Order_Comms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block Coms?</label>
    <type>Checkbox</type>
</CustomField>