force-app/main/default/objects/Order_Communication_POE__c/fields/Booking_Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Booking_Total_Paid__c</fullName>
    <formula>Hotel_Subtotal__c +   Merchant_Surcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Total Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>