force-app/main/default/objects/Order_Communication_POE__c/fields/Booking_Total_Paid_Aff__c.field-meta.xml
<CustomField>
    <fullName>Booking_Total_Paid_Aff__c</fullName>
    <formula>Hotel_Subtotal__c +  Affiliate_Booking_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Total Paid(Aff)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>