force-app/main/default/objects/Order_Communication_POE__c/fields/Cancellation_amount__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_amount__c</fullName>
    <label>Cancellation amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>