force-app/main/default/objects/Order_Communication_POE__c/fields/Check_In_date__c.field-meta.xml
<CustomField>
    <fullName>Check_In_date__c</fullName>
    <label>Check In date</label>
    <type>Date</type>
</CustomField>