force-app/main/default/objects/Order_Communication_POE__c/fields/Check_Out_Day__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Day__c</fullName>
    <formula>CASE(
MOD(Check_Out_date__c - DATE(1900, 1, 7), 7),
0, &quot;Sun&quot;,
1, &quot;Mon&quot;,
2, &quot;Tue&quot;,
3, &quot;Wed&quot;,
4, &quot;Thu&quot;,
5, &quot;Fri&quot;,
6, &quot;Sat&quot;, &quot;Error&quot;)+&apos;,&apos;+&apos; &apos;+TEXT(DAY(Check_Out_date__c))+&apos; &apos;+CASE(MONTH(Check_Out_date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)+&apos; &apos;+TEXT(YEAR((Check_In_date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Out Day</label>
    <type>Text</type>
</CustomField>