force-app/main/default/objects/Order_Communication_POE__c/fields/Check_Out_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Instruction__c</fullName>
    <label>Check Out Instruction</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>