force-app/main/default/objects/Order_Communication_POE__c/fields/communication_code__c.field-meta.xml
<CustomField>
    <fullName>communication_code__c</fullName>
    <label>Communication Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>