force-app/main/default/objects/Order_Communication_POE__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>TAD_Order__r.TAD_Company__c</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>