force-app/main/default/objects/Order_Communication_POE__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Communications</relationshipLabel>
    <relationshipName>Order_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>