force-app/main/default/objects/Order_Communication_POE__c/fields/Contact_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_Formula__c</fullName>
    <formula>TAD_Order__r.ordexp_account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Id Formula</label>
    <type>Text</type>
</CustomField>