force-app/main/default/objects/Order_Communication_POE__c/fields/coupon__c.field-meta.xml
<CustomField>
    <fullName>coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>coupon</label>
    <referenceTo>coupon__c</referenceTo>
    <relationshipLabel>Order Communications</relationshipLabel>
    <relationshipName>Order_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>