force-app/main/default/objects/Order_Communication_POE__c/fields/Coupon_Deduct__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Deduct__c</fullName>
    <formula>TAD_Order__r.Coupon_Deduct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Deduct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>