force-app/main/default/objects/Order_Communication_POE__c/fields/Coupon_Status__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Status__c</fullName>
    <formula>TEXT(coupon__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Status</label>
    <type>Text</type>
</CustomField>