force-app/main/default/objects/Order_Communication_POE__c/fields/Coupon_Total__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Total__c</fullName>
    <formula>IF(CONTAINS(TEXT(TAD_Order__r.ordexp_total_payment_received__c + TAD_Order__r.Total_Order_OLI_Coupon__c - Coupon_Deduct__c ), &quot;.&quot;),
LEFT(TEXT(TAD_Order__r.ordexp_total_payment_received__c + TAD_Order__r.Total_Order_OLI_Coupon__c - Coupon_Deduct__c ), 
FIND(&quot;.&quot;, TEXT(TAD_Order__r.ordexp_total_payment_received__c +  TAD_Order__r.Total_Order_OLI_Coupon__c - Coupon_Deduct__c )) -1) &amp;
&quot;.&quot; &amp;
RPAD(MID(TEXT(ROUND(TAD_Order__r.ordexp_total_payment_received__c +  TAD_Order__r.Total_Order_OLI_Coupon__c - Coupon_Deduct__c , 2)),
FIND(&quot;.&quot;, TEXT(TAD_Order__r.ordexp_total_payment_received__c +  TAD_Order__r.Total_Order_OLI_Coupon__c - Coupon_Deduct__c ))+1,
2),
2,
&quot;0&quot;),
TEXT(TAD_Order__r.ordexp_total_payment_received__c +  TAD_Order__r.Total_Order_OLI_Coupon__c - Coupon_Deduct__c ) &amp; &quot;.00&quot;)</formula>
    <label>Coupon Total</label>
    <type>Text</type>
</CustomField>