force-app/main/default/objects/Order_Communication_POE__c/fields/Cruise_Customisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Customisation_Type__c</fullName>
    <label>Cruise Customisation Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>