force-app/main/default/objects/Order_Communication_POE__c/fields/Customer_Coms_Details__c.field-meta.xml
<CustomField>
    <fullName>Customer_Coms_Details__c</fullName>
    <label>Customer Coms Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>