force-app/main/default/objects/Order_Communication_POE__c/fields/Customer_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Enquiry</label>
    <referenceTo>Customer_Enquiry__c</referenceTo>
    <relationshipLabel>Order Communications</relationshipLabel>
    <relationshipName>Order_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>