force-app/main/default/objects/Order_Communication_POE__c/fields/Data_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Data_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Refresh</label>
    <type>Checkbox</type>
</CustomField>