force-app/main/default/objects/Order_Communication_POE__c/fields/Day_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Day_Month_Year__c</fullName>
    <formula>TAD_Order__r.ordexp_departure_date__r.Day_Month_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day, Month Year</label>
    <type>Text</type>
</CustomField>