force-app/main/default/objects/Order_Communication_POE__c/fields/Days_Nights__c.field-meta.xml
<CustomField>
    <fullName>Days_Nights__c</fullName>
    <formula>TEXT(TAD_Order__r.ordexp_deal__r.Days_Nights__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Nights</label>
    <type>Text</type>
</CustomField>