force-app/main/default/objects/Order_Communication_POE__c/fields/Days_until_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_until_Departure_Date__c</fullName>
    <formula>Order_Line_Item__r.ordexp_TAD_Order__r.ordexp_days_until_departure_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until Departure Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>