force-app/main/default/objects/Order_Communication_POE__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <formula>TAD_Order__r.Deal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal</label>
    <type>Text</type>
</CustomField>