force-app/main/default/objects/Order_Communication_POE__c/fields/Deal_and_Title__c.field-meta.xml
<CustomField>
    <fullName>Deal_and_Title__c</fullName>
    <formula>TAD_Order__r.ordexp_deal_id_title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal and Title</label>
    <type>Text</type>
</CustomField>