force-app/main/default/objects/Order_Communication_POE__c/fields/Deal_Flag__c.field-meta.xml
<CustomField>
    <fullName>Deal_Flag__c</fullName>
    <formula>TEXT(TAD_Order__r.ordexp_deal__r.Deal_Flag__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Flag</label>
    <type>Text</type>
</CustomField>