force-app/main/default/objects/Order_Communication_POE__c/fields/Deal_PDF_plain__c.field-meta.xml
<CustomField>
    <fullName>Deal_PDF_plain__c</fullName>
    <formula>TAD_Order__r.ordexp_deal__r.pdf__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal PDF plain</label>
    <type>Text</type>
</CustomField>