force-app/main/default/objects/Order_Communication_POE__c/fields/DealMerchnatCode_TadOrder__c.field-meta.xml
<CustomField>
    <fullName>DealMerchnatCode_TadOrder__c</fullName>
    <formula>TAD_Order__r.Deal_Merchant_Code_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealMerchnatCode-TadOrder</label>
    <type>Text</type>
</CustomField>