force-app/main/default/objects/Order_Communication_POE__c/fields/departure_city__c.field-meta.xml
<CustomField>
    <fullName>departure_city__c</fullName>
    <label>Departure City</label>
    <length>150</length>
    <type>Text</type>
</CustomField>