force-app/main/default/objects/Order_Communication_POE__c/fields/Escapes_with_flights__c.field-meta.xml
<CustomField>
    <fullName>Escapes_with_flights__c</fullName>
    <formula>Order_Line_Item__r.ordexp_TAD_Order__r.Is_Escape_Deal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escapes with flights</label>
    <type>Checkbox</type>
</CustomField>