force-app/main/default/objects/Order_Communication_POE__c/fields/Fees_Information__c.field-meta.xml
<CustomField>
    <fullName>Fees_Information__c</fullName>
    <label>Fees Information</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>