force-app/main/default/objects/Order_Communication_POE__c/fields/Fire_Feefo_today__c.field-meta.xml
<CustomField>
    <fullName>Fire_Feefo_today__c</fullName>
    <formula>IF( (return_date__c + 2) =   TODAY() , &quot;yes&quot;, &quot;no&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fire Feefo today</label>
    <type>Text</type>
</CustomField>