force-app/main/default/objects/Order_Communication_POE__c/fields/has_flights__c.field-meta.xml
<CustomField>
    <fullName>has_flights__c</fullName>
    <formula>TAD_Order__r.ordexp_deal__r.has_flights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Flights</label>
    <type>Checkbox</type>
</CustomField>