force-app/main/default/objects/Order_Communication_POE__c/fields/Hotel_Order__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hotel Order</label>
    <referenceTo>Booking_Hotel__c</referenceTo>
    <relationshipLabel>Order Communications</relationshipLabel>
    <relationshipName>Order_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>