force-app/main/default/objects/Order_Communication_POE__c/fields/Hotel_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Subtotal__c</fullName>
    <formula>Subtotal__c -  (Tax_Fees__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>