force-app/main/default/objects/Order_Communication_POE__c/fields/Internal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Internal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Communications (Internal Contact)</relationshipLabel>
    <relationshipName>Order_Communications_internal</relationshipName>
    <type>Lookup</type>
</CustomField>