force-app/main/default/objects/Order_Communication_POE__c/fields/is_escapes__c.field-meta.xml
<CustomField>
    <fullName>is_escapes__c</fullName>
    <formula>TAD_Order__r.Is_Escape_Deal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Escapes</label>
    <type>Checkbox</type>
</CustomField>