force-app/main/default/objects/Order_Communication_POE__c/fields/Is_triggered__c.field-meta.xml
<CustomField>
    <fullName>Is_triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is triggered</label>
    <type>Checkbox</type>
</CustomField>