force-app/main/default/objects/Order_Communication_POE__c/fields/Itinerary_ID__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_ID__c</fullName>
    <label>Itinerary ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>