force-app/main/default/objects/Order_Communication_POE__c/fields/Know_before_you_go__c.field-meta.xml
<CustomField>
    <fullName>Know_before_you_go__c</fullName>
    <label>Know before you go</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>