force-app/main/default/objects/Order_Communication_POE__c/fields/Local_tax_in_AUD__c.field-meta.xml
<CustomField>
    <fullName>Local_tax_in_AUD__c</fullName>
    <label>Local tax in AUD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>