force-app/main/default/objects/Order_Communication_POE__c/fields/Local_tax_in_local_currency__c.field-meta.xml
<CustomField>
    <fullName>Local_tax_in_local_currency__c</fullName>
    <label>Local tax in local currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>