force-app/main/default/objects/Order_Communication_POE__c/fields/Local_Tax_Info__c.field-meta.xml
<CustomField>
    <fullName>Local_Tax_Info__c</fullName>
    <label>Local Tax Info</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>