force-app/main/default/objects/Order_Communication_POE__c/fields/Local_Tax_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Local_Tax_ISO_Code__c</fullName>
    <label>Local Tax ISO Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>