force-app/main/default/objects/Order_Communication_POE__c/fields/Merchant_confirmation_address__c.field-meta.xml
<CustomField>
    <fullName>Merchant_confirmation_address__c</fullName>
    <description>Merchant confirmation address from Tad order</description>
    <label>Merchant confirmation address</label>
    <type>Email</type>
</CustomField>