force-app/main/default/objects/Order_Communication_POE__c/fields/Merchant_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Surcharge__c</fullName>
    <label>Merchant Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>