force-app/main/default/objects/Order_Communication_POE__c/fields/merchantBookingURL_tadOrder__c.field-meta.xml
<CustomField>
    <fullName>merchantBookingURL_tadOrder__c</fullName>
    <formula>TAD_Order__r.MERCHANT_BOOKING_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>merchantBookingURL-TadOrder</label>
    <type>Text</type>
</CustomField>