force-app/main/default/objects/Order_Communication_POE__c/fields/Missed_Parts__c.field-meta.xml
<CustomField>
    <fullName>Missed_Parts__c</fullName>
    <description>For Tad Interrupted Tour</description>
    <label>Missed Parts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>