force-app/main/default/objects/Order_Communication_POE__c/fields/MSC_Comms__c.field-meta.xml
<CustomField>
    <fullName>MSC_Comms__c</fullName>
    <label>MSC Comms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Send_1864_AU</fullName>
                <label>Send - 1864 AU</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Send - 1864 NZ</fullName>
            </value>
            <value>
                <fullName>Send - 1869 AU</fullName>
            </value>
            <value>
                <fullName>Send - 1869 NZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>