force-app/main/default/objects/Order_Communication_POE__c/fields/New_Account_Holder_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Holder_Email__c</fullName>
    <label>New Account Holder Email</label>
    <type>Email</type>
</CustomField>