force-app/main/default/objects/Order_Communication_POE__c/fields/Night__c.field-meta.xml
<CustomField>
    <fullName>Night__c</fullName>
    <label>Rooms and Nights</label>
    <length>255</length>
    <type>Text</type>
</CustomField>