force-app/main/default/objects/Order_Communication_POE__c/fields/No_of_Passengers_Cancelling__c.field-meta.xml
<CustomField>
    <fullName>No_of_Passengers_Cancelling__c</fullName>
    <label>No. of Passengers Cancelling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>