force-app/main/default/objects/Order_Communication_POE__c/fields/NPS_URL__c.field-meta.xml
<CustomField>
    <fullName>NPS_URL__c</fullName>
    <label>NPS URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>