force-app/main/default/objects/Order_Communication_POE__c/fields/NRL_Flight_Coupon__c.field-meta.xml
<CustomField>
    <fullName>NRL_Flight_Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NRL Flight Coupon</label>
    <referenceTo>Generic_Records__c</referenceTo>
    <relationshipLabel>Order Communications</relationshipLabel>
    <relationshipName>Order_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>