force-app/main/default/objects/Order_Communication_POE__c/fields/Number_of_Beds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Beds__c</fullName>
    <label>Number of Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>