force-app/main/default/objects/Order_Communication_POE__c/fields/number_of_days__c.field-meta.xml
<CustomField>
    <fullName>number_of_days__c</fullName>
    <formula>TEXT(TAD_Order__r.ordexp_deal__r.number_of_days__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>number of days</label>
    <type>Text</type>
</CustomField>