force-app/main/default/objects/Order_Communication_POE__c/fields/OptionsPC_fromTADOrder__c.field-meta.xml
<CustomField>
    <fullName>OptionsPC_fromTADOrder__c</fullName>
    <formula>TAD_Order__r.ordexp_option__r.Name</formula>
    <label>OptionsPC_fromTADOrder</label>
    <type>Text</type>
</CustomField>