force-app/main/default/objects/Order_Communication_POE__c/fields/Order_Link_Token__c.field-meta.xml
<CustomField>
    <fullName>Order_Link_Token__c</fullName>
    <formula>TAD_Order__r.Link_token__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Link Token</label>
    <type>Text</type>
</CustomField>