force-app/main/default/objects/Order_Communication_POE__c/fields/order_number__c.field-meta.xml
<CustomField>
    <fullName>order_number__c</fullName>
    <formula>TAD_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>