force-app/main/default/objects/Order_Communication_POE__c/fields/Order_Payment_link__c.field-meta.xml
<CustomField>
    <fullName>Order_Payment_link__c</fullName>
    <label>Order Payment link</label>
    <length>18</length>
    <type>Text</type>
</CustomField>