force-app/main/default/objects/Order_Communication_POE__c/fields/Order_Payment_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Order_Payment_Outstanding__c</fullName>
    <label>Order Payment Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>