force-app/main/default/objects/Order_Communication_POE__c/fields/orderexp_BPay_CRN__c.field-meta.xml
<CustomField>
    <fullName>orderexp_BPay_CRN__c</fullName>
    <formula>TAD_Order__r.BPay_CRN__c</formula>
    <label>BPay CRN</label>
    <type>Text</type>
</CustomField>