force-app/main/default/objects/Order_Communication_POE__c/fields/orderexp_Purchaser_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>orderexp_Purchaser_Full_Name__c</fullName>
    <formula>TAD_Order__r.ordexp_account__r.PersonContact.FirstName &amp;&quot; &quot;&amp; TAD_Order__r.ordexp_account__r.PersonContact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchaser Full Name</label>
    <type>Text</type>
</CustomField>