force-app/main/default/objects/Order_Communication_POE__c/fields/ordexp_Cancelled_PAX_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Cancelled_PAX_Quantity__c</fullName>
    <formula>TAD_Order__r.ordexp_Cancelled_PAX_Quantity__c</formula>
    <label>Cancelled PAX Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>