force-app/main/default/objects/Order_Communication_POE__c/fields/ordexp_Day_Month_PC_fromTADOrder__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Day_Month_PC_fromTADOrder__c</fullName>
    <formula>TAD_Order__r.Day_Month_PC__c</formula>
    <label>Day/Month PC_fromTADOrder</label>
    <type>Text</type>
</CustomField>