force-app/main/default/objects/Order_Communication_POE__c/fields/ordexp_DealFC_fromTADOrder__c.field-meta.xml
<CustomField>
    <fullName>ordexp_DealFC_fromTADOrder__c</fullName>
    <formula>TAD_Order__r.ordexp_deal__r.title__c</formula>
    <label>DealFC_fromTADOrder</label>
    <type>Text</type>
</CustomField>