force-app/main/default/objects/Order_Communication_POE__c/fields/ordexp_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Departure_Date__c</fullName>
    <formula>TAD_Order__r.ordexp_departure_date__r.date__c</formula>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>