force-app/main/default/objects/Order_Communication_POE__c/fields/ordexp_Option_Purchased__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Option_Purchased__c</fullName>
    <formula>TAD_Order__r.ordexp_option__r.Name</formula>
    <label>Option Purchased</label>
    <type>Text</type>
</CustomField>