force-app/main/default/objects/Order_Communication_POE__c/fields/ordexp_PAX_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ordexp_PAX_Quantity__c</fullName>
    <formula>TAD_Order__r.PAX_Qty__c</formula>
    <label>PAX Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>